[tool.poetry]
name = "bbmp-api"
version = "0.1.0"
description = ""
authors = ["An0mal1e <69910604+An0mal1e@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bbmp_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
alembic = "^1.9.2"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
